--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@jest/globals": "^26.6.2",
     "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "jest-cli": "^29.7.0"
   }
 }
